--- a/package.json
+++ b/package.json
@@ -51,11 +51,15 @@
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.26.3",
+    "@typescript-eslint/eslint-plugin": "^8.19.0",
+    "@typescript-eslint/parser": "^8.19.0",
     "babel-loader": "^9.2.1",
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.3",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.3",
     "husky": "^9.1.7",
