--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
     "source.fixAll.tslint": "explicit",
     "source.fixAll.stylelint": "explicit"
   },
+  "eslint.workingDirectories": [{ "directory": "./", "changeProcessCWD": true }],
   "[markdown]": {
     "editor.formatOnSave": false
   },
@@ -71,5 +72,7 @@
     "domtoimage"
   ],
   "typescript.tsdk": "node_modules/typescript/lib",
-  "i18n-ally.localesPaths": ["packages/common/src/constants/locales"]
+  "i18n-ally.localesPaths": ["packages/common/src/constants/locales"],
+  "workbench.activityBar.orientation": "vertical", // 资源管理器放在右边
+  "default_line_ending": "unix" // 默认换行符为unix风格
 }
