--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "baseUrl": "./",
     "paths": {
       "@/*": ["src/*"]
-    }
+    },
+    "outDir": "./dist"
   },
   // 不指定 include 可以让项目更灵活，自动包含所有相关的 TypeScript 文件
   "exclude": ["node_modules", "dist"]
