fix(eslint): 完善eslint

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,8 +23,10 @@
   },
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
+    "source.organizeImports": "explicit",
     "source.fixAll.eslint": "explicit"
   },
+
   // "editor.codeActionsOnSave": {
   //   "source.fixAll.eslint": true,
   //   "source.fixAll.tslint": "always",
