--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "start": "webpack serve --mode development",
     "build": "webpack --mode production",
     "prepare": "husky install",
+    "commitlint": "commitlint --edit",
     "check-unused-exports": "ts-unused-exports tsconfig.json"
   },
   "eslintConfig": {
@@ -52,6 +53,7 @@
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.26.3",
+    "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
     "@eslint/compat": "^1.2.4",
     "@eslint/eslintrc": "^3.2.0",
