feat(*): 封装存储和axios

--- a/.env
+++ b/.env
@@ -3,8 +3,15 @@
 NODE_ENV=development
 # 生产环境
 NODE_ENV=production
+
+# 端口号
 PORT=9000
-BASE_URL=http://localhost:9000
+
+# 接口基础URL
+BASE_URL=http://localhost:3000
+
+# 默认超时时间
+TIMEOUT=5000
 
 # 环境变量通常用于存储应用程序运行时所需的配置信息，尤其是那些不适合硬编码在代码中的敏感信息或可变信息。以下是一些常见的环境变量：
 # 数据库连接信息：
