--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,7 @@
   "singleQuote": true,
   "jsxSingleQuote": true,
   "trailingComma": "none",
-  "printWidth": 150
+  "printWidth": 150,
+  "tabWidth": 2,
+  "useTabs": false
 }
