--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,5 +71,16 @@
   "workbench.activityBar.orientation": "vertical",
   "editor.fontSize": 15,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "eslint.codeActionsOnSave.rules": null
+  "eslint.codeActionsOnSave.rules": null,
+  "json.schemas": [
+    {
+      "fileMatch": [".prettierrc"],
+      "schema": false
+    },
+    {
+      "fileMatch": [".eslintrc"],
+      "schema": false
+    }
+  ],
+  "editor.comments.insertSpace": true
 }
